--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV01_N.png filter=lfs diff=l
 Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV02.png filter=lfs diff=lfs merge=lfs -text
 Assets/TerrainTexturesPackFree/TerrainTextures/GrassUV02_N.png filter=lfs diff=lfs merge=lfs -text
 Assets/TerrainTexturesPackFree/DemoScene/Demo.unity filter=lfs diff=lfs merge=lfs -text
+Assets/Wispy Sky/Extras/SphericalRenderPSD.psd filter=lfs diff=lfs merge=lfs -text
